--- a/Statistics-Diet Study.ipynb
+++ b/Statistics-Diet Study.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=pd.read_csv(\"/home/sakshi/Documents/DietStudy.csv\")"
+    "data=pd.read_csv(\"DietStudy.csv\")"
    ]
   },
   {
